--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -72,3 +72,13 @@
   width: 24px;
   height: 24px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .portfolio__button {
+    flex-wrap: wrap;
+
+    & button {
+      margin-top: 15px;
+    }
+  }
+}
