--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -29,7 +29,23 @@
   }
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
-
+    .customers {
+        margin-bottom: 60px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        &__item {
+            width: 210px;
+            height: 92px;
+            margin-top: 30px;
+            
+            &:not(:last-child){
+                margin-right: 0;
+            }
+            & div {
+                align-content: center;
+            }
+        }
+    }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
     .customers {
@@ -40,7 +56,6 @@
             width:226px;
             height: 92px;
             margin-top: 30px;
-            align-items: stretch;
             
             &:not(:last-child){
                 margin-right: 0;
