--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -151,3 +151,29 @@
     background-position: 1px;
   }
 
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .modal {
+      width: 450px;
+      top: 35%;
+      &__form-statement,
+      &__form-statement a {
+        font-size: 12px;
+      }
+      &__close:hover {
+        fill: var(--blue-elements)
+      }
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    .modal {
+      width: 450px;
+      top: 45%;
+      &__form-statement,
+      &__form-statement a {
+        font-size: 12px;
+      }
+      &__close:hover {
+        fill: var(--blue-elements)
+      }
+    }
+  }
