--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -28,9 +28,21 @@
     width: 40px;
     height: 20px;
   }
-
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .social-list {
+      margin-bottom: 24px;
+      justify-content: center;
+      &__link {
+        margin-right: 10px;
+      }
+    }
+  }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     .social-list {
       margin-bottom: 24px;
+      justify-content: center;
+      &__link {
+        margin-right: 10px;
+      }
     }
   }
